--- a/admin.html
+++ b/admin.html
@@ -38,6 +38,14 @@
         <input type="text" id="mk_acc" placeholder="Mật khẩu đăng nhập game">
         <button class="btn-blue" onclick="saveAcc()">ĐĂNG LÊN SHOP</button>
     </div>
+    <div class="box">
+    <h2>📋 DUYỆT THẺ CÀO</h2>
+    <div id="admin-card-list">Đang tải danh sách thẻ...</div>
+</div>
+
+<script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-database-compat.js"></script>
+<script src="script.js"></script>
 
     <div class="box">
         <h2>💰 CỘNG TIỀN USER</h2>
